# advent2016

./: .gitignore  Makefile  day1-part2.cc  day1.py  day1.shader_test  day10.py  day11.c  day11.py  day12.sh  day13-part2.c  day13.c  day13c.cc  day14.c  day14.py  day15.py  day16.c  day17.c  day18.c  day18.py  day19.c  day19.py  day2.el  day2.py  day20.c  day21.c  day21.py  day22.c  day22.py  day23.py  day24.c  day3.py  day4.el  day4.py  day5.c  day5.py  day6.cc  day6.py  day7.c  day7.py  day8-video.c  (+7 more)
2015/: day7.py  day8.py  day9.py
2016/: Makefile  day11.c  day13.c  day14.py  day15.py  day16.c  day16.py  day17.c  day20.c  day20.py  day22.c  day23.py  day24.c  day25.py  day3.py  day4.py  day5.c  day6.py  day8-video.sh  day8.py
2016/rust/: Cargo.toml
2016/rust/src/: day1.rs
2017/: day1.c  day11.py  day21.c  day6.cc  day7.c  day8.sh  day9.c
2017/day12/src/: main.rs
2017/day13/src/: main.rs
2017/day14/src/: main.rs
2017/day15/src/: main.rs
2017/day16/src/: main.rs
2017/vulkan/: day2.shader_test
2018/: .gitignore  day1.py  day10.glsl  day10.py  day11.c  day11.py  day11.shader_test  day12.c  day12.py  day13.py  day14.py  day15.c  day16.c  day17.py  day18.c  day19-disassembly.txt  day19.c  day2.py  day23.c  day23.py  day3.py  day4.py  day5.c  day5.py  day6.py  day7.c  day7.py  day8.c  day9.c
2019/: day1.py  day10.c  day11.c  day12.py  day13.c  day15-test.txt  day15.c  day17.py  day19.c  day19.sh  day2.c  day2.py  day20-example.txt  day20.c  day22.c  day23.c  day25-explore.py  day25.c  day3.py  day4.c  day5.c  day6.c  day7.c  day8.py  deque.c  deque.h  grid.c  grid.h  intcode.c  intcode.h  intcode.py  meson.build  permutations.c  permutations.h  read-memory.c  read-memory.h  runner.c
2020/: tree.txt  write_numbers.txt
2020/day1/: attemptpart1  day1full-offline.txt  day1part1-asm.txt  day1part1.txt  day1part1.uef
2020/day10/: day10-lisp.uef  day10.py
2020/day10/src/: main.rs
2020/day11/: Makefile  day11.asm  loader.txt
2020/day12/: .gitignore
2020/day12/src/: main.rs
2020/day13/: day13.txt
2020/day13/src/: main.rs
2020/day17/: day17.py
2020/day18/: day18.el
2020/day2/: day2-all.uef  day2-assembler.txt  day2-data.uef  day2-getnumber.txt  day2-test-data.uef  day2count.asm  part2-assembler.txt
2020/day20/: day20.py
2020/day21/: day21.py
2020/day22/: day22-lisp.uef
2020/day3/: day3.txt
2020/day4/: day4-input.uef  day4.txt
2020/day6/: day6.asm  electron.asm  loader.txt
2020/day7/: Cargo.toml
2020/day7/src/: main.rs
2020/day8/: day8.txt  day8.uef  input.uef
2020/day9/: .gitignore
2020/day9/src/: main.rs
2021/day1/src/: main.rs
2021/day10/src/: main.rs
2021/day11/: .gitignore
2021/day11/src/: main.rs  util.rs
2021/day12/: .gitignore  Cargo.toml
2021/day12/src/: main.rs
2021/day13/: Cargo.toml
2021/day13/src/: main.rs
2021/day14/: Cargo.toml
2021/day14/src/: main.rs
2021/day15/src/: main.rs  util.rs  walker.rs
2021/day16/: Cargo.toml
2021/day16/src/: bitvec.rs  main.rs
2021/day17/: .gitignore  Cargo.toml
2021/day17/src/: main.rs
2021/day18/src/: main.rs
2021/day19/: Cargo.toml
2021/day19/src/: generate_matrices.rs  main.rs
2021/day2/src/: main.rs
2021/day20/src/: main.rs
2021/day21/src/: main.rs
2021/day22/: .gitignore  Cargo.toml
2021/day22/src/: main.rs
2021/day23/: .gitignore  Cargo.toml
2021/day23/src/: main.rs
2021/day24/: Cargo.toml  working_out.txt
2021/day24/src/: columnize.rs  main.rs
2021/day25/: Cargo.toml
2021/day25/src/: main.rs
2021/day3/src/: main.rs
2021/day4/src/: main.rs
2021/day5/src/: main.rs
2021/day6/src/: main.rs
2021/day7/: .gitignore
2021/day7/src/: main.rs
2021/day8/src/: main.rs
2021/day9/src/: main.rs  walker.rs
2022/: make-day.sh
2022/day1/src/: main.rs
2022/day10/src/: main.rs
2022/day11/src/: main.rs
2022/day12/: Cargo.toml
2022/day12/src/: main.rs  util.rs  walker.rs
2022/day13/: Cargo.toml
2022/day13/src/: main.rs
2022/day14/src/: main.rs
2022/day15/: .gitignore
2022/day20/: .gitignore
2022/day23/: Cargo.toml
2022/day24/: Cargo.toml
2022/day25/: Cargo.toml
2022/day6/: Cargo.toml
2024/: day1.py
2024/day1/: day1.py
2024/day10/: .gitignore
2024/day15/: .gitignore
2024/day17/: .gitignore
2024/day19/: grep-version.sh
2024/day2/: day2.py
2024/day21/: Cargo.toml
2024/day6/: .gitignore
eek/day11/: day11.asm  loader.txt
eek/day14/: day14.py
eek/day18/: day18.el
eek/day21/: day21.py
eek/day3/: day3-full.uef  day3-input.uef  day3.txt
eek/day4/: day4.txt
eek/day6/: .gitignore  Makefile  day6.asm
eek/day8/: day8.txt
rust/: Cargo.toml
rust/src/: day1.rs  day22.rs
template/: Cargo.toml
template/src/: main.rs  util.rs
(+61 files in other folders)
